--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -5,6 +5,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 30px;
+    text-align: center;
 }
 
 .subtitulo{
@@ -33,12 +34,14 @@
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 30px;
+    
 }
 
 #alineacion{
-    height: 100%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: stretch;
+	align-content: stretch;
 }
