--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,10 +1,11 @@
 .titulo{
-    background-color: lightgreen;
+    background-color: rgb(91, 185, 91);
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 30px;
+    padding-right: 30px;
     text-align: center;
 }
 
@@ -15,12 +16,14 @@
     padding-top: 8px;
     padding-bottom: 5px;
     padding-left: 30px;
+    padding-right: 30px;
 }
 
 .encabezado{
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 30px;
+    padding-right: 30px;
 }
 
 .enfasis{
@@ -28,13 +31,14 @@
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 30px;
+    padding-right: 30px;
 }
 
 .texto{
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 30px;
-    
+    padding-right: 30px;
 }
 
 #alineacion{
