--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,3 +1,14 @@
+
+#alineacion{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	align-items: stretch;
+	align-content: stretch;
+}
+
+
 .titulo{
     background-color: rgb(160, 239, 160);
     color:black;
@@ -39,13 +50,4 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 30px;
     padding-right: 30px;
-}
-
-#alineacion{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: stretch;
 }
