--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -6,11 +6,13 @@
 	justify-content: space-evenly;
 	align-items: stretch;
 	align-content: stretch;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 
 .titulo{
-    background-color: rgb(160, 239, 160);
+    background-color: rgb(143, 222, 143);
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 10px;
@@ -26,14 +28,14 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 8px;
     padding-bottom: 5px;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-right: 30px;
 }
 
 .encabezado{
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-right: 30px;
 }
 
@@ -41,13 +43,14 @@
     color:black;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-right: 30px;
 }
 
 .texto{
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 30px;
+    padding-left: 20px;
     padding-right: 30px;
+    padding-bottom: 8px;
 }
