--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,5 +1,5 @@
 
-#alineacion{
+.alineacion{
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
@@ -22,6 +22,13 @@
     text-align: center;
 }
 
+.foto{
+    
+        float: right;
+        border: 5px solid #333
+    }
+
+
 .subtitulo{
     background-color: darkgreen;
     color:white;
@@ -30,6 +37,15 @@
     padding-bottom: 5px;
     padding-left: 20px;
     padding-right: 30px;
+}
+
+.alinear-foto{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: stretch;
+	align-content: stretch;
 }
 
 .encabezado{
@@ -58,7 +74,7 @@
 
 
 .listas{
-    list-style-type: square
+    list-style-type: none
 }
 
 
