--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -25,7 +25,7 @@
 .foto{
     
         float: right;
-        border: 5px solid #333
+        border: 5px solid #333;
     }
 
 
@@ -36,7 +36,7 @@
     padding-top: 8px;
     padding-bottom: 5px;
     padding-left: 20px;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 .alinear-foto{
@@ -77,5 +77,62 @@
     list-style-type: none
 }
 
-
-	
+ul.acorh,
+ul.acorh * {
+margin: 0;
+padding: 20px;
+border: 0;
+}
+ul.acorh {
+margin: 10px auto;
+padding: 0;
+list-style: none;
+width: 100%;
+font-size: 18px;
+}
+ul.acorh li {
+list-style: none;
+}
+ul.acorh li a {
+display: block;
+padding: 10px 10px 10px 20px;
+background:darkgreen;
+color: #eee;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+border-bottom: 1px solid #000;
+border-top: 1px solid #666;
+text-decoration: none;
+box-sizing: border-box;
+}
+ul.acorh li ul {
+max-height: 0;
+margin: 0;
+padding: 0;
+list-style: none;
+overflow: hidden;
+transition: .3s all ease-in;
+}
+ul.acorh li li a {
+padding: 10px 10px 10px 40px;
+background: #999;
+color: #000;
+font-size: 16px;
+border: 0;
+border-bottom: 1px solid #ccc;
+box-sizing: border-box;
+}
+ul.acorc li li:last-child a {
+border-bottom: 0;
+}
+ul.acorh li:hover ul {
+max-height: 300px;
+transition: .3s all ease-in;
+}
+ul.acorh li a:hover {
+background: #666;
+color: #fff;
+}
+ul.acorh li:target ul {
+max-height: 300px;
+transition: .3s all ease-in;
+}
