--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,149 +1,120 @@
-
-.alineacion{
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-evenly;
-	align-items: stretch;
-	align-content: stretch;
-    padding-left: 2%;
-    padding-right: 2%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-
-.titulo{
-    background-color: rgb(143, 222, 143);
-    color:black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    text-align: center;
-}
-
-.foto{
-    
-        float: right;
-        width: 364px;
-        height: 336px;
-        padding-top: 20px;
-        }
-
-      
-.subtitulo{
-    background-color: darkgreen;
-    color:white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-top: 8px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.alinear-foto{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: stretch;
-	align-content: stretch;
-}
-
-.encabezado{
-    color:black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 20px;
-    padding-right: 30px;
-}
-
-.enfasis{
-    color:black;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 20px;
-    padding-right: 30px;
-}
-
-
-.texto{
-    color:black;
-    font-weight: lighter;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-left: 20px;
-    padding-right: 30px;
-    padding-bottom: 8px;
-}
-
-.resumen{
-    color:black;
-    font-weight: lighter;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 55%;
-    text-align: justify;
-    margin: 0 auto;  
-}
-
-.listas{
-    list-style-type: none
-}
-
+/* Formato Acordion */
 ul.acorh,
 ul.acorh * {
-margin: 0;
-padding: 20px;
-border: 0;
+  margin: 0;
+  padding: 20px;
+  border: 0;
 }
+
 ul.acorh {
-margin: 10px auto;
-padding: 0;
-list-style: none;
-width: 100%;
-font-size: 18px;
+  margin: 10px auto;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  font-size: 18px;
 }
+
 ul.acorh li {
-list-style: none;
+  list-style: none;
 }
+
 ul.acorh li a {
-display: block;
-padding: 10px 10px 10px 20px;
-background:darkgreen;
-color: #eee;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-border-bottom: 1px solid #000;
-border-top: 1px solid #666;
-text-decoration: none;
-box-sizing: border-box;
+  display: block;
+  padding: 10px 10px 10px 20px;
+  background: darkgreen;
+  color: #eeeeee;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  border-bottom: 1px solid #000;
+  border-top: 1px solid #666;
+  text-decoration: none;
+  box-sizing: border-box;
 }
+
 ul.acorh li ul {
-max-height: 0;
-margin: 0;
-padding: 0;
-list-style: none;
-overflow: hidden;
-transition: .3s all ease-in;
+  max-height: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  transition: 0.3s all ease-in;
 }
+
 ul.acorh li li a {
-padding: 10px 10px 10px 40px;
-background: rgb(143, 222, 143);
-color: black;
-font-size: 16px;
-border: 0;
-border-bottom: 1px solid #ccc;
-box-sizing: border-box;
+  padding: 10px 10px 10px 40px;
+  background: rgb(143, 222, 143);
+  color: black;
+  font-size: 16px;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  box-sizing: border-box;
 }
+
 ul.acorc li li:last-child a {
-border-bottom: 0;
+  border-bottom: 0;
 }
+
 ul.acorh li:hover ul {
-max-height: 600px;
-transition: .3s all ease-in;
+  max-height: 600px;
+  transition: 0.3s all ease-in;
 }
+
 ul.acorh li a:hover {
-background: #666;
-color: #fff;
+  background: #666;
+  color: #fff;
 }
+
 ul.acorh li:target ul {
-max-height: 600px;
-transition: .3s all ease-in;
+  max-height: 600px;
+  transition: 0.3s all ease-in;
 }
+
+.desarrollador {
+  text-align: center;
+}
+
+.titulo {
+  background-color: rgb(143, 222, 143);
+  color: black;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: center;
+}
+
+.foto {
+  float: right;
+  width: 364px;
+  height: 336px;
+  padding-top: 20px;
+}
+
+.alinear-foto {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: stretch;
+}
+
+/* Fonts */
+body {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+header {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+footer {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}/*# sourceMappingURL=styles.css.map */
