se modifica layout home

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -1,5 +1,7 @@
+@import "./partials/variables";
 @import "./partials/reset";
 @import "./partials/acordion";
 @import "./partials/desarrollador";
 @import "./partials/header";
 @import "./partials/fonts";
+@import "./partials/menu-index";
