--- a/Styles/partials/_fonts.scss
+++ b/Styles/partials/_fonts.scss
@@ -12,3 +12,7 @@ header {
 footer {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+a:visited{
+    text-decoration: none;
+}
