--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -90,22 +90,6 @@ ul.acorh li:target ul {
   text-align: center;
 }
 
-.foto {
-  float: right;
-  width: 364px;
-  height: 336px;
-  padding-top: 20px;
-}
-
-.alinear-foto {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: stretch;
-}
-
 /* Fonts */
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -117,4 +101,41 @@ header {
 
 footer {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+.menu-index {
+  text-align: center;
+}
+
+.menu-item {
+  padding: 5%;
+  width: 30rem;
+  height: 20rem;
+  background-color: rgb(143, 222, 143);
+  padding-top: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 3%;
+  margin-bottom: 3%;
+  margin-top: 2%;
+  border-color: black 5%;
+  font-size: xx-large;
+  color: black;
+  text-decoration: none;
+}
+
+.resumen {
+  color: black;
+  text-align: justify;
+  padding: 3%;
+}
+
+.foto {
+  width: 15rem;
+  text-align: center;
+  padding: 3%;
 }/*# sourceMappingURL=styles.css.map */
