se continuan con las modificaciones de layout y formato

--- a/Styles/partials/_menu-index.scss
+++ b/Styles/partials/_menu-index.scss
@@ -7,7 +7,7 @@
     padding: 5%;
     width: 30rem;
     height: 20rem;
-    background-color: $maincolor;
+    background-color: $segundocolor;
     padding-top: 2%;
     padding-left: 1%;
     padding-right: 1%;
