--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -5,3 +5,5 @@
 @import "./partials/header";
 @import "./partials/fonts";
 @import "./partials/menu-index";
+@import "./partials/navegador";
+@import "./partials/contenido-principal";
