--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -9,7 +9,7 @@
 ul.acorh,
 ul.acorh * {
   margin: 0;
-  padding: 20px;
+  padding: 10px;
   border: 0;
 }
 
@@ -115,7 +115,7 @@ a:visited {
   padding: 5%;
   width: 30rem;
   height: 20rem;
-  background-color: rgb(143, 222, 143);
+  background-color: darkgreen;
   padding-top: 2%;
   padding-left: 1%;
   padding-right: 1%;
@@ -138,4 +138,38 @@ a:visited {
   width: 15rem;
   text-align: center;
   padding: 3%;
+}
+
+/* Formato Navegador*/
+.a {
+  text-align: center;
+  padding: 5%;
+}
+
+.text-muted {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+
+.item-nav {
+  padding: 3%;
+}
+
+.item-nav:hover {
+  background-color: darkgreen;
+}
+
+/* Contenido Principal */
+.contenido-principal {
+  padding: 3%;
+  list-style: none;
+}
+
+/* formato subititulo*/
+.subtitulo {
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
