se modifica formato

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -172,4 +172,8 @@ a:visited {
 /* formato subititulo*/
 .subtitulo {
   text-align: center;
+}
+
+li {
+  list-style: none;
 }/*# sourceMappingURL=styles.css.map */
