--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -7,3 +7,4 @@
 @import "./partials/menu-index";
 @import "./partials/navegador";
 @import "./partials/contenido-principal";
+@import "./partials/educacion";
