--- a/Styles/partials/_menu-index.scss
+++ b/Styles/partials/_menu-index.scss
@@ -1,3 +1,5 @@
+/* Formato Menu Index*/
+
 .menu-index{
     text-align: center;
 
@@ -18,7 +20,7 @@
     font-size: xx-large;
     color: black;
     text-decoration: none;
-}
+    }
 
 
 .resumen{
@@ -31,4 +33,9 @@
     width: 15rem;
     text-align: center;
     padding: 3%;
+}
+
+.menu-item:hover{
+    background-color: $maincolor;
+
 }
